package aparelho;

public interface AparelhoTelefonico {
    void fazerChamada(String numero);
    void atender();
    void desligar();
}
