package navegador;

public interface NavegadorInternet {
    void abrirURL(String url);
    void voltar();
    void avancar();
    void atualizar();
}
