package reprodutor;

public interface ReprodutorMusical {
    void tocar();
    void pausar();
    void parar();
    void avancarFaixa();
}
